[package]
name = "sonoff_zigbee_extcap"
version = "0.1.0"
edition = "2024"
homepage = "https://github.com/machshev/wireshark-zigbee"
description = "Extcap for Sonoff ZigBee Dongle"

[dependencies]
anyhow = "1.0.100"
clap = "4.5.50"
env_logger = "0.11.8"
hex = "0.4.3"
log = "0.4.28"
pcap-file = "2.0.0"
r-extcap = "0.2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
tokio = "1.48.0"
tokio-serial = "5.4.5"
